[tool.poetry]
name = "ent-tools"
version = "0.1.0"
description = ""
authors = ["shigashiyama"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
logzero = "1.7.0"
ja-sentence-segmenter = "^0.0.2"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
