[tool.poetry]
name = "ent-tools-openai"
version = "0.1.0"
description = ""
authors = ["shigashiyama"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "0.27.8"
tiktoken = "0.5.1"
ent-tools = {path = "../ent_tools"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
