[tool.poetry]
name = "ent-tools-spacy"
version = "0.1.0"
description = ""
authors = ["shigashiyama"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ent-tools = {path = "../ent_tools"}
spacy = "3.4.4"
ginza = "5.1.3"
ja-ginza-electra = "5.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
